Reduce SQL queries